# GeneticFitness

./: .gitignore  Makefile  README.md  comet_api_key.yaml  pyproject.toml
data/: test.ipynb
data/raw/: J01609.1.fasta
lightning_logs/version_40/: events.out.tfevents.1698170881.Air-von-Tobia.42570.0  events.out.tfevents.1698170889.Air-von-Tobia.42570.1  events.out.tfevents.1698170889.Air-von-Tobia.42570.2
lightning_logs/version_41/: events.out.tfevents.1698170893.Air-von-Tobia.42570.3  events.out.tfevents.1698170898.Air-von-Tobia.42570.4  events.out.tfevents.1698170898.Air-von-Tobia.42570.5
lightning_logs/version_42/: events.out.tfevents.1698170902.Air-von-Tobia.42570.6
lightning_logs/version_43/: events.out.tfevents.1698171209.Air-von-Tobia.42746.0  events.out.tfevents.1698171216.Air-von-Tobia.42746.1  events.out.tfevents.1698171216.Air-von-Tobia.42746.2
lightning_logs/version_44/: events.out.tfevents.1698171219.Air-von-Tobia.42746.3
lightning_logs/version_45/: events.out.tfevents.1698171356.Air-von-Tobia.42823.0
lightning_logs/version_46/: events.out.tfevents.1698171648.Air-von-Tobia.42990.0
lightning_logs/version_47/: events.out.tfevents.1698171824.Air-von-Tobia.43054.0  events.out.tfevents.1698171834.Air-von-Tobia.43054.1  events.out.tfevents.1698171834.Air-von-Tobia.43054.2
lightning_logs/version_48/: events.out.tfevents.1698171839.Air-von-Tobia.43054.3
lightning_logs/version_49/: events.out.tfevents.1698171908.Air-von-Tobia.43161.0
lightning_logs/version_50/: events.out.tfevents.1698172036.Air-von-Tobia.43238.0  events.out.tfevents.1698172045.Air-von-Tobia.43238.1  events.out.tfevents.1698172045.Air-von-Tobia.43238.2
lightning_logs/version_51/: events.out.tfevents.1698172078.Air-von-Tobia.43238.3  events.out.tfevents.1698172088.Air-von-Tobia.43238.4  events.out.tfevents.1698172088.Air-von-Tobia.43238.5
lightning_logs/version_52/: events.out.tfevents.1698172094.Air-von-Tobia.43238.6  events.out.tfevents.1698172111.Air-von-Tobia.43238.7  events.out.tfevents.1698172112.Air-von-Tobia.43238.8
lightning_logs/version_53/: events.out.tfevents.1698172121.Air-von-Tobia.43238.9  events.out.tfevents.1698172133.Air-von-Tobia.43238.10  events.out.tfevents.1698172133.Air-von-Tobia.43238.11
models/basic_cnn/: epoch=28-val_loss=0.22-v1.ckpt
notebooks/: Batch Sampler.ipynb  NN Preprocessing.ipynb  NN validation.ipynb  Untitled-1.ipynb  VAE validation 2.ipynb  VAE validation.ipynb  VAE.ipynb  average_significant_correlation.csv  correlation.csv  correlation_matrix.csv  gradcam.ipynb  plot_dG_coorelation.ipynb  random_forest_permutatuon_importances.csv  rna-fm.ipynb  run_test.ipynb  significant_samples.csv  simple_fitness_analysis copy.ipynb  simple_fitness_analysis.ipynb  splitting.ipynb  test_rbs.ipynb  test_rbs_104.ipynb
reports/: InitalFiguresAndrei.docx
src/: config.yaml  run.py
src/analysis/: __init__.py  correlation.py  correlation_matrix.py  correlation_with_fitness.py  linear_regression.py  random_forest_permutation_importance.py
src/data/: df_dataset.py  grouped_batch_sampler.py  load_data.py  splitting.py  utils.py
src/utils/: misc.py  (+1 more)
(+240 files in other folders)
