[tool.poetry]
name = "geneticfitness"
version = "0.1.0"
description = ""
authors = ["Tobia Ochsner <tobia.ochsner@hotmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.1.1"
numpy = "^1.26.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
black = "^23.9.1"
pyright = "^1.1.327"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
flake8-tidy-imports = "^4.10.0"
flake8-simplify = "^0.20.0"
biopython = "^1.81"
loguru = "^0.7.2"
#viennarna = {path = "/usr/bin"}
scipy = "^1.11.2"
codon-bias = "^0.3.1"
torch = { version = ">=2.0", extras = ["cpu"] }
#torchvision = ">=0.15"
#rna-fm
ptflops = "^0.7"
lightning = "^2.0.9.post0"
tensorboard = "^2.14.1"
comet-ml = "^3.33.11"
optuna = "^3.4.0"
ostir = "^1.1.1"
opencv-python = "^4.9.0.80"
forgi = "^2.2.3"

# [tool.poetry.dev-dependencies]
# jupyter = "^1.0.0"
# jupyter-black = "^0.3.4"
# jupyterlab = "^4.0.6"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
viennarna = "^2.7.0"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
